# AI

./: .env.example  .gitignore  QUICKSTART.md  README.md  api.yaml  docker-compose.yml  main.py  noten  pyproject.toml  requirements.txt  start_server.sh  start_worker.sh  test_api.py
app/: __init__.py  celery_app.py  chord_format_utils.py  config.py  main.py  schemas.py
app/tasks/: audio_tasks.py  chord_tasks.py
halmoni/: .gitignore  CLAUDE.md  README.md  claude_plan.md  main.py  pyproject.toml  work description.md
halmoni/.claude/agents/: music-theory-expert.md
halmoni/examples/: chord_jazzer_demo.py  chord_suggestions_example.py
halmoni/halmoni/: __init__.py
halmoni/halmoni/analysis/: __init__.py  adam_stark_detector.py  chord_detector.py  key_detector.py  midi_analyzer.py
halmoni/halmoni/core/: __init__.py  chord.py  interval.py  key.py  note.py  progression.py  scale.py
halmoni/halmoni/instruments/: __init__.py  bass.py  guitar.py  piano.py
halmoni/halmoni/suggestions/: __init__.py  base_strategy.py  borrowed_chord.py  chromatic_approach.py  neapolitan.py  sub_v7.py  suggestion_engine.py  suspend.py  tsd_movement.py
halmoni/proposal/: clarified_library_proposal.md  implementation_plan.md  library_improvement_proposal.md  phase4_advanced_features.md  review_for_proposal.md  strategy_review.md  technical_review_of_clarified_proposal.md
halmoni/tests/: __init__.py  conftest.py  test_analysis.py  test_core.py  test_development_state.py  test_instruments.py  test_suggestions.py
hiscore/: CLAUDE.md  CURRENT_PLAN.md  README.md  basic_pitch_onnx.py  openapi.yaml  pyproject.toml  queueable_tasks.md  text serialized chord for llm.md
hiscore/hiscore/: main.py
hiscore/model_output/: bass_transcription.mid
hiscore/output/: piano_transcription.mid
