[project]
name = "hiserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "anthropic>=0.40.0",
    "beartype>=0.22.5",
    "celery==5.4.0",
    "demucs>=4.0.1",
    "deprecated>=1.3.1",
    "einops>=0.8.1",
    "fastapi==0.115.5",
    "jams>=0.3.5",
    "librosa>=0.11.0",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "mido>=1.3.0",
    "mir-eval>=0.8.2",
    "ml-collections>=1.1.0",
    "music21>=9.1.0",
    "numpy==1.26.4",
    "onnx>=1.19.0",
    "onnxruntime>=1.23.2",
    "pretty-midi>=0.2.11",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pyrubberband>=0.4.0",
    "python-dotenv>=1.2.1",
    "python-multipart==0.0.18",
    "pyyaml>=6.0.3",
    "redis==5.2.0",
    "rotary-embedding-torch>=0.8.9",
    "scipy>=1.16.3",
    "segmentation-models-pytorch>=0.5.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "tqdm>=4.67.1",
    "transformers==4.45.1",
    "uvicorn[standard]==0.32.1",
    "x-transformers>=2.11.23",
]
